002.Prometheus部署/003.kubernetes/001.prometheus/004.prometheus-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-server
  namespace: monitoring
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
      component: server
    #matchExpressions:
    #- {key: app, operator: In, values: [prometheus]}
    #- {key: component, operator: In, values: [server]}
  template:
    metadata:
      labels:
        app: prometheus
        component: server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
    spec:
      nodeName: 192.168.1.31
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: registry.cn-guangzhou.aliyuncs.com/appimages/apps:prometheus-v2.47.2
          imagePullPolicy: Always
          command:
            - prometheus
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus
            - --storage.tsdb.retention=720h
            - --web.enable-lifecycle
          ports:
            - containerPort: 9090
              protocol: TCP
          resources:
            limits:
              memory: 2Gi
          volumeMounts:
            - mountPath: /etc/prometheus/prometheus.yml
              name: prometheus-config
              subPath: prometheus.yml
            - mountPath: /etc/prometheus/prometheus.rules
              name: prometheus-rules
              subPath: prometheus.rules
            - mountPath: /prometheus/
              name: prometheus-storage-volume
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
            items:
              - key: prometheus.yml
                path: prometheus.yml
                mode: 0644
        - name: prometheus-rules
          configMap:
            name: prometheus-rules
            items:
              - key: prometheus.rules
                path: prometheus.rules
                mode: 0644
        - name: prometheus-storage-volume
          hostPath:                ## NFS, PV, PVC
            path: /data/prometheus ## chmod -R 777 /data/prometheus
            type: Directory
        #- name: prometheus-storage-volume
        #  emptyDir: {}
