002.Prometheus部署/003.kubernetes/001.prometheus/005.prometheus-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    lb.kubesphere.io/v1alpha1: openelb
    protocol.openelb.kubesphere.io/v1alpha1: layer2
    eip.openelb.kubesphere.io/v1alpha2: eip-pool
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9090'
  labels:
    app: prometheus
spec:
  type: LoadBalancer  # NodePort 
  ports:
    - port: 9090
      targetPort: 9090
      #nodePort: 30090
      protocol: TCP
  selector:
    app: prometheus
    component: server
