002.Prometheus部署/003.kubernetes/001.prometheus/006.prometheus-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    lb.kubesphere.io/v1alpha1: openelb
    protocol.openelb.kubesphere.io/v1alpha1: layer2
    eip.openelb.kubesphere.io/v1alpha2: eip-pool
  name: prometheus
  namespace: monitoring
#  labels:
#    app: prometheus
spec:
  ingressClassName: nginx
  rules:
  - host: www.cyprometheus.com
    http:
      paths:
      - backend:
          service:
            name: prometheus
            #app: prometheus
            #component: server            
            port:
              number: 9090
        path: /
        pathType: Prefix
